Fit getboard, getfeed with friend realtion